更新 清理优化reed-core